--- a/custom_components/samsungtv_tizen/manifest.json
+++ b/custom_components/samsungtv_tizen/manifest.json
@@ -1,12 +1,13 @@
 {
-  "domain": "samsungtv_tizen",
-  "name": "SamsungTV Tizen",
-  "documentation": "https://github.com/jaruba/ha-samsungtv-tizen",
+  "domain": "samsungtv_smart",
+  "name": "SamsungTV Smart",
+  "documentation": "https://github.com/ollo69/ha-samsungtv-smart",
   "requirements": [
     "websocket-client==0.56.0",
     "wakeonlan==1.1.6"
   ],
   "dependencies": [],
-  "codeowners": ["@jaruba"],
-  "homeassistant": "0.99.3"
+  "codeowners": ["@ollo69"],
+  "homeassistant": "0.99.3",
+  "config_flow": true
 }
