--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -3,7 +3,7 @@
   "name": "SamsungTV Smart",
   "documentation": "https://github.com/ollo69/ha-samsungtv-smart",
   "requirements": [
-    "websocket-client==0.56.0",
+    "websocket-client>=0.56.0",
     "wakeonlan==1.1.6"
   ],
   "dependencies": [],
