--- a/custom_components/samsungtv_tizen/manifest.json
+++ b/custom_components/samsungtv_tizen/manifest.json
@@ -5,8 +5,7 @@
   "requirements": [
     "websocket-client==0.56.0",
     "wakeonlan==1.1.6",
-    "numpy==1.19.2",
-    "aiofiles==0.6.0"
+    "numpy==1.19.2"
   ],
   "dependencies": [],
   "codeowners": ["@jaruba"],
