--- a/custom_components/samsungtv_tizen/manifest.json
+++ b/custom_components/samsungtv_tizen/manifest.json
@@ -9,6 +9,6 @@
   ],
   "dependencies": [],
   "codeowners": ["@jaruba"],
-  "homeassistant": "0.99.3"
+  "homeassistant": "0.99.3",
   "version": "0.0.0"
 }
