Update wakeonlan version requirement

--- a/custom_components/samsungtv_tizen/manifest.json
+++ b/custom_components/samsungtv_tizen/manifest.json
@@ -2,9 +2,10 @@
   "domain": "samsungtv_tizen",
   "name": "SamsungTV Tizen",
   "documentation": "https://github.com/jaruba/ha-samsungtv-tizen",
+  "issue_tracker": "https://github.com/jaruba/ha-samsungtv-tizen/issues",
   "requirements": [
     "websocket-client==0.56.0",
-    "wakeonlan==1.1.6",
+    "wakeonlan>=2.0.0",
     "numpy==1.19.2",
     "aiofiles==0.6.0"
   ],
