--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -11,5 +11,6 @@
   "dependencies": [],
   "codeowners": ["@jaruba", "@ollo69", "@screwdgeh"],
   "config_flow": true,
+  "iot_class": "cloud_polling",
   "version": "0.7.5"
 }
