--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/ollo69/ha-samsungtv-smart",
   "issue_tracker": "https://github.com/ollo69/ha-samsungtv-smart/issues",
   "requirements": [
-    "websocket-client>=0.58.0",
+    "websocket-client!=1.4.0,>=0.58.0",
     "wakeonlan>=2.0.0",
     "aiofiles>=0.8.0"
   ],
@@ -12,5 +12,5 @@
   "codeowners": ["@jaruba", "@ollo69", "@screwdgeh"],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "version": "0.7.5"
+  "version": "0.7.6"
 }
