--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -21,6 +21,6 @@ jobs:
         run: |
           pip install -r requirements.txt
       - name: isort
-        run: isort --multi-line 3 --line-length 88 --profile black --check .
+        run: isort --multi-line 3 --line-length 88 --profile black --diff --check .
       - name: Black
         run: black --line-length 88 --check .
