--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,13 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Ensure Docker script files uses LF to support Docker for Windows.
+# Ensure "git config --global core.autocrlf input" before you clone
+*     text eol=lf
+*.py  whitespace=error
+
+*.ico binary
+*.gif binary
+*.jpg binary
+*.png binary
+*.zip binary
+*.mp3 binary
+
+Dockerfile.dev linguist-language=Dockerfile
