Use selector in option flow forms (#197)
This should solve issue of some not filled field with default value

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -11,5 +11,5 @@ tts:
 
 logger:
   default: info
-  logs:
-    custom_components.samsungtv_smart: debug
+  #logs:
+  #  custom_components.samsungtv_smart: debug
