--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -9,8 +9,12 @@
     "aiofiles>=0.8.0"
   ],
   "dependencies": [],
-  "codeowners": ["@jaruba", "@ollo69", "@screwdgeh"],
+  "codeowners": [
+    "@jaruba",
+    "@ollo69",
+    "@screwdgeh"
+  ],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "version": "0.8.0"
+  "version": "0.8.1"
 }
