--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "samsungtv_smart",
   "name": "SamsungTV Smart",
+  "integration_type": "device",
   "documentation": "https://github.com/ollo69/ha-samsungtv-smart",
   "issue_tracker": "https://github.com/ollo69/ha-samsungtv-smart/issues",
   "requirements": [
@@ -9,13 +10,8 @@
     "aiofiles>=0.8.0"
   ],
   "dependencies": [],
-  "codeowners": [
-    "@jaruba",
-    "@ollo69",
-    "@screwdgeh"
-  ],
+  "codeowners": ["@jaruba", "@ollo69", "@screwdgeh"],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "integration_type": "device",
   "version": "0.9.0b1"
 }
