--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -13,5 +13,5 @@
   "codeowners": ["@jaruba", "@ollo69", "@screwdgeh"],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "version": "0.9.0b1"
+  "version": "0.9.0"
 }
