--- a/custom_components/samsungtv_smart/manifest.json
+++ b/custom_components/samsungtv_smart/manifest.json
@@ -7,7 +7,8 @@
   "requirements": [
     "websocket-client!=1.4.0,>=0.58.0",
     "wakeonlan>=2.0.0",
-    "aiofiles>=0.8.0"
+    "aiofiles>=0.8.0",
+    "casttube>=0.2.1"
   ],
   "dependencies": [],
   "codeowners": ["@jaruba", "@ollo69", "@screwdgeh"],
