--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,6 @@ flake8
 isort
 black
 websocket-client!=1.4.0,>=0.58.0
-wakeonlan~=2.0.1
-aiofiles~=0.8.0
+wakeonlan>=2.0.0
+aiofiles>=0.8.0
+casttube>=0.2.1
