--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -5,5 +5,6 @@ pytest==7.1.3
 pytest-homeassistant-custom-component==0.12.21
 # From our manifest.json for our custom component
 websocket-client!=1.4.0,>=0.58.0
-wakeonlan~=2.0.1
-aiofiles~=0.8.0
+wakeonlan>=2.0.0
+aiofiles>=0.8.0
+casttube>=0.2.1
