--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,10 @@ typing-extensions>=4.4.0,<5.0
 voluptuous==0.13.1
 voluptuous-serialize==2.5.0
 yarl==1.8.1
-pre-commit
-flake8
-isort
-black
+pre-commit==3.0.0
+flake8==6.0.0
+isort==5.12.0
+black==23.1.0
 websocket-client!=1.4.0,>=0.58.0
 wakeonlan>=2.0.0
 aiofiles>=0.8.0
