--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -20,12 +20,13 @@ jobs:
       pull-requests: write  # for actions/stale to close stale PRs
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/stale@v6
+    - uses: actions/stale@v7
       with:
         stale-issue-message: 'This issue is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 7 days.'
         stale-pr-message: 'This PR is stale because it has been open 60 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
         close-issue-message: 'This issue was closed because it has been stalled for 7 days with no activity.'
         close-pr-message: 'This PR was closed because it has been stalled for 10 days with no activity.'
+        exempt-issue-labels: 'Feature Requests,documentation'
         days-before-issue-stale: 45
         days-before-pr-stale: -1
         days-before-issue-close: 7
